<resources>
    <string name="app_name">410570243 施玨瑜</string>
    <string name="app_title">猜字謎遊戲</string>
    <string name="tv_riddle">謎題</string>
    <string name="tv2">猜字:</string>
    <string name="ed_answer">四大皆空</string>
    <string name="tv_result">結果</string>
    <string name="btn_riddle">出題</string>
    <string name="btn_Answer">答題</string>
    <string name="btn_reAnswer">重答</string>
    <string name="btn_showAnswer">看謎底</string>




</resources>